--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,9 +10,12 @@ main:
   - name: Papers
     url: /#papers
     weight: 11
+  - name: Awards
+    url: /#awards
+    weight: 12
   - name: Talks
     url: /#talks
-    weight: 12
+    weight: 13
   # - name: News
   #   url: /#news
   #   weight: 13
