--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,7 +7,7 @@ main:
   - name: Bio
     url: /
     weight: 10
-  - name: Papers
+  - name: Publications
     url: /#papers
     weight: 11
   - name: Awards
@@ -22,6 +22,9 @@ main:
   - name: Experience
     url: experience/
     weight: 20
+  - name: Teaching
+    url: /#teaching
+    weight: 21
   # - name: Projects
   #   url: projects/
   #   weight: 30
