--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -19,8 +19,8 @@ main:
   # - name: News
   #   url: /#news
   #   weight: 13
-  - name: Experience
-    url: experience/
+  - name: Software
+    url: /#software
     weight: 20
   - name: Service
     url: /#service
